# deepread

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/deepread/: main.py
src/deepread/api/: __init__.py  health.py  query.py  upload.py
src/deepread/core/: config.py  logger.py
src/deepread/models/: request.py  response.py
src/deepread/rag/chunking/: chunker.py
src/deepread/rag/embeddings/: embedding_model.py
src/deepread/rag/llm/: llm_client.py
src/deepread/rag/prompts/: templates.py
src/deepread/rag/reader/: pdf_reader.py
src/deepread/rag/retriver/: retriver.py
src/deepread/rag/vector_store/: vectordb.py
src/deepread/services/: ingestion.py  query.py
src/deepread/static/: index.html
src/deepread/ui/: app.py
