[project]
name = "deepread"
version = "0.1.0"
description = "Reading research papers made easy"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "langchain>=1.2.15",
    "langchain-groq>=1.1.2",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.44.0",
]
